--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "hatchling.build"
 
 [project]
 dynamic = ["version"]
-name = "dgu-bot"
+name = "ghutils-bot"
 requires-python = ">=3.12"
 dependencies = [
-    "dgu-common",
+    "ghutils-common",
     "discord-py>=2.4.0",
 ]
 
@@ -17,10 +17,10 @@ dev-dependencies = []
 
 [tool.hatch.version]
 source = "regex"
-path = "../common/src/dgu_common/__version__.py"
+path = "../common/src/ghutils_common/__version__.py"
 
 [tool.hatch.metadata]
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/dgu_bot"]
+packages = ["src/ghutils_bot"]
