--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,4 +15,8 @@
     "python.analysis.diagnosticMode": "workspace",
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
+    "python.analysis.packageIndexDepths": [
+        { "name": "pydantic", "depth": 2 },
+        { "name": "discord", "depth": 3 },
+    ]
 }
