--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -9,6 +9,8 @@ requires-python = ">=3.12"
 dependencies = [
     "ghutils-common",
     "discord-py>=2.4.0",
+    "pydantic>=2.7.4",
+    "pydantic-settings>=2.3.4",
 ]
 
 [tool.rye]
