--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "discord-py>=2.4.0",
     "pydantic>=2.7.4",
     "pydantic-settings>=2.3.4",
+    "pygithub>=2.3.0",
 ]
 
 [tool.rye]
