--- a/codedeploy/compose.override.yml
+++ b/codedeploy/compose.override.yml
@@ -2,9 +2,14 @@
 services:
   bot:
     image: "ghcr.io/object-object/discord-github-utils@${IMAGE_ID}"
-    restart: on-failure
     environment:
       ENVIRONMENT: prod
+
+  api:
+    image: "ghcr.io/object-object/discord-github-utils@${IMAGE_ID}"
+    environment:
+      ENVIRONMENT: prod
+
 secrets:
   env:
     file: .env
