--- a/codedeploy/compose.yml
+++ b/codedeploy/compose.yml
@@ -1,18 +1,52 @@
 # common Compose configuration for all environments
 services:
   bot:
+    restart: unless-stopped
     stop_signal: SIGINT
-    volumes:
-      - data:/app/data
     secrets:
       - source: env
         target: /app/.env
     environment:
+      MODULE: ghutils.bot.app
+      POSTGRES_URL: postgres://postgres:postgres@postgres/postgres # postgres
       HEALTH_CHECK_DISPLAY_NAME: Docker
       HEALTH_CHECK_PORT: 40404
       HEALTH_CHECK_STARTUP_DELAY: 0
       HEALTH_CHECK_TIMEOUT: 15
       HEALTH_CHECK_ATTEMPTS: 1
       HEALTH_CHECK_INTERVAL: 0
+    depends_on:
+      - postgres
+
+  api:
+    restart: unless-stopped
+    stop_signal: SIGINT
+    secrets:
+      - source: env
+        target: /app/.env
+    ports:
+      - 7100:7100
+    environment:
+      MODULE: ghutils.bot.api.app
+      PORT: 7100
+      POSTGRES_URL: postgres://postgres:postgres@postgres/postgres
+    depends_on:
+      - postgres
+
+  postgres:
+    image: postgres:15
+    restart: unless-stopped
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DATABASE: postgres
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
-  data:
+  pg_data:
