--- a/codedeploy/compose.override.yml
+++ b/codedeploy/compose.override.yml
@@ -1,14 +1,19 @@
 # production overrides for compose.yml
 services:
   bot:
+    restart: unless-stopped
     image: "ghcr.io/object-object/discord-github-utils@${IMAGE_ID}"
     environment:
       ENVIRONMENT: prod
 
   api:
+    restart: unless-stopped
     image: "ghcr.io/object-object/discord-github-utils@${IMAGE_ID}"
     environment:
       ENVIRONMENT: prod
+
+  postgres:
+    restart: unless-stopped
 
 secrets:
   env:
