--- a/codedeploy/compose.yml
+++ b/codedeploy/compose.yml
@@ -34,6 +34,7 @@ services:
       DB_URL: postgresql://postgres:postgres@postgres/postgres
     depends_on:
       - postgres
+      - bot
 
   postgres:
     image: postgres:15
