--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requires-python = ">=3.12"
 [tool.rye]
 managed = true
 virtual = true
+universal = true
 dev-dependencies = [
     "ruff~=0.4.10",
     "pre-commit",
