--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,7 +104,7 @@ jobs:
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/') || inputs.deploy
     runs-on: ubuntu-latest
     steps:
-      - run:
+      - run: echo
 
   push-image:
     needs:
@@ -169,7 +169,7 @@ jobs:
 
       - name: Deploy stack
         id: deploy
-        run:
+        run: echo TODO
 
   deploy-terraform:
     needs:
@@ -194,7 +194,7 @@ jobs:
           path: cdktf.out
 
       - name: Deploy stack
-        run:
+        run: echo TODO
 
   deploy-codedeploy:
     needs:
