Add health check API endpoint, add api_root_path envvar

--- a/codedeploy/compose.override.yml
+++ b/codedeploy/compose.override.yml
@@ -5,6 +5,7 @@ services:
     image: "${IMAGE}"
     environment:
       ENVIRONMENT: prod
+      API_ROOT_PATH: /api
 
   postgres:
     restart: unless-stopped
