--- a/infrastructure/pyproject.toml
+++ b/infrastructure/pyproject.toml
@@ -8,6 +8,9 @@ name = "ghutils-infrastructure"
 requires-python = ">=3.12"
 dependencies = [
     "ghutils-common",
+    "aws-cdk-lib>=2.158.0",
+    "aws-cdk-github-oidc>=2.4.1",
+    "object-ci[aws-cdk] @ git+https://github.com/object-Object/ci",
 ]
 
 [tool.rye]
