--- a/compose.override.yml
+++ b/compose.override.yml
@@ -5,6 +5,7 @@ services:
     environment:
       ENVIRONMENT: dev
       API_ROOT_PATH:
+      HEALTH_CHECK_URL: http://localhost:7100/health
     develop:
       watch:
         - action: sync
