--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,5 +28,8 @@
             "name": "ghutils",
             "database": "${workspaceFolder:discord-github-utils}/db.sqlite"
         }
-    ]
+    ],
+    "[fluent]": {
+        "editor.rulers": [104],
+    },
 }
