--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pfzy>=0.3.4",
     "more-itertools>=10.5.0",
     "fluent-runtime>=0.4.0",
+    "pyyaml>=6.0.2",
 ]
 
 [tool.rye]
