--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "more-itertools>=10.5.0",
     "fluent-runtime>=0.4.0",
     "pyyaml>=6.0.2",
+    "pylette>=4.0.0",
 ]
 
 [tool.rye]
