chore: fix deprecated ruff-lsp setting in .vscode
lint.args "--extend-ignore" -> lint.ignore
https://docs.astral.sh/ruff/settings/#lint_extend-ignore

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,9 +8,7 @@
         "editor.rulers": [88],
     },
     "ruff.organizeImports": true,
-    "ruff.lint.args": [
-        "--extend-ignore=I",
-    ],
+    "ruff.lint.ignore": ["I"],
     "python.languageServer": "Pylance",
     "python.analysis.diagnosticMode": "workspace",
     "python.testing.unittestEnabled": false,
