--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,9 @@
-name: Build and deploy
+name: Deploy
 
 on:
   push:
-    branches: '*'
     tags: 'v[0-9]+.[0-9]+.[0-9]+*'
-  pull_request:
-    branches: '*'
   workflow_dispatch:
-    inputs:
-      deploy:
-        type: boolean
-        default: false
 
 env:
   NODE_VERSION: 18
@@ -18,89 +11,20 @@ env:
   IMAGE_NAME: object-object/discord-github-utils
 
 jobs:
-  build-image:
-    runs-on: ubuntu-latest
-    outputs:
-      tag: ${{ fromJson(steps.meta.outputs.json).tags[0] }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract image metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: Build Docker image
-        id: build
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=docker,dest=/tmp/image.tar
-
-      - name: Upload image artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: docker-image
-          path: /tmp/image.tar
-          retention-days: 7
-
-  build-aws-cdk:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: eifinger/setup-rye@v4
-        with:
-          enable-cache: true
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: object-Object/ci/setup@v0
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          npm-packages: aws-cdk
-
-      - name: Sync dependencies
-        run: rye sync --no-lock --no-dev
-
-      - name: Synth aws-cdk stack
-        run: cdk synth --ci --no-lookups --strict
-
-      - name: Upload synth artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: aws-cdk-synth
-          path: cdk.out
-
-  # dummy "gate" job to restrict when the deployment jobs can run
-  setup-deployments:
-    needs:
-      - build-image
-      - build-aws-cdk
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/') || inputs.deploy
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo
+  build:
+    uses: ./.github/workflows/build.yml
+    secrets: inherit
 
   push-image:
     needs:
-      - setup-deployments
-      - build-image
+      - build
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
     environment:
       name: docker
-      url: https://${{ needs.build-image.outputs.tag }}
+      url: https://${{ needs.build.outputs.image-tag }}
     outputs:
       digest: ${{ steps.digest.outputs.value }}
     steps:
@@ -127,12 +51,11 @@ jobs:
 
       - name: Get image digest
         id: digest
-        run: echo "value=$(docker inspect --format='{{index .RepoDigests 0}}' ${{ needs.build-image.outputs.tag }})" >> "$GITHUB_OUTPUT"
+        run: echo "value=$(docker inspect --format='{{index .RepoDigests 0}}' ${{ needs.build.outputs.image-tag }})" >> "$GITHUB_OUTPUT"
 
   deploy-aws-cdk:
     needs:
-      - setup-deployments
-      - build-aws-cdk
+      - build
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -164,7 +87,6 @@ jobs:
 
   deploy-codedeploy:
     needs:
-      - setup-deployments
       - push-image
       - deploy-aws-cdk
     runs-on: ubuntu-latest
