--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ managed = true
 virtual = true
 universal = true
 dev-dependencies = [
-    "ruff~=0.4.10",
+    "ruff~=0.12.3",
     "pre-commit",
 ]
 
@@ -95,7 +95,7 @@ exclude = [
     "**/__pycache__",
 ]
 
-typeCheckingMode = "basic"
+typeCheckingMode = "standard"
 
 enableExperimentalFeatures = true
 strictDictionaryInference = true
