--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -8,7 +8,7 @@ name = "ghutils-bot"
 requires-python = ">=3.12"
 dependencies = [
     "ghutils-common",
-    "discord-py>=2.5.0",
+    "discord-py>=2.6.2",
     "pydantic>=2.7.4",
     "pydantic-settings>=2.3.4",
     "fastapi>=0.111.0",
@@ -20,6 +20,7 @@ dependencies = [
     "fluent-runtime>=0.4.0",
     "pyyaml>=6.0.2",
     "pylette>=4.0.0",
+    "humanize>=4.13.0",
 ]
 
 [tool.rye]
