--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -8,7 +8,7 @@ name = "ghutils-bot"
 requires-python = ">=3.12"
 dependencies = [
     "ghutils-common",
-    "discord-py>=2.6.2",
+    "discord-py>=2.6.3",
     "pydantic>=2.7.4",
     "pydantic-settings>=2.3.4",
     "fastapi>=0.111.0",
@@ -21,6 +21,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "pylette>=4.0.0",
     "humanize>=4.13.0",
+    "babel>=2.17.0",
 ]
 
 [tool.rye]
