Improve markdown rendering (fix #6)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         { "name": "pydantic", "depth": 2 },
         { "name": "discord", "depth": 3 },
         { "name": "sqlalchemy", "depth": 2 },
+        { "name": "marko", "depth": 2 },
     ],
     "sqltools.useNodeRuntime": true,
     "sqltools.connections": [
